import("//third_party/webrtc/webrtc.gni")
import("//build_overrides/build.gni")

rtc_test("p2p_e2e_test") {
  testonly = true
  visibility = [ "//:default" ]
  sources = [
    "e2e_tests.cc",
    "fake_signaling_channel.cc",
  ]
  include_dirs = [ "//talk/owt/sdk/include/cpp","//third_party" ]
  deps = [
    "../../..:owt_sdk_p2p",
    "//third_party/webrtc/test:run_loop",
    "//third_party/webrtc/test:test_main",
    "//third_party/webrtc/test:test_support",
    "//third_party/webrtc/test:video_test_support",
  ]
  if (is_win) {
    libs = [ "dcomp.lib" ]
  }
  if(owt_cg_server){
    defines = [ "OWT_CG_SERVER" ]
  }
}
