# Copyright (C) <2021> Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

import("//build_overrides/webrtc.gni")
import("//build_overrides/owt.gni")
import("//testing/test.gni")

executable("sample_background_blur") {
  sources = [ "sample_background_blur.cc" ]
  include_dirs = [ "//talk/owt/sdk/include/cpp" ]
  deps = [ "//talk/owt:owt_sdk_base" ]
  data_deps = [ "//talk/owt/sdk/ic:owt_ic" ]
}
